CREATE TABLE departments (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code       VARCHAR(40) NOT NULL UNIQUE,
    name       VARCHAR(120) NOT NULL,
    active     BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE hospital_services (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    department_id BIGINT NOT NULL REFERENCES departments(id),
    name          VARCHAR(120) NOT NULL,
    bed_capacity  INT NOT NULL DEFAULT 0,
    active        BOOLEAN NOT NULL DEFAULT TRUE,
    created_at    TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_hospital_service_name UNIQUE (name)
);

CREATE TABLE beds (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hospital_service_id BIGINT NOT NULL REFERENCES hospital_services(id) ON DELETE CASCADE,
    label               VARCHAR(40) NOT NULL,
    occupied            BOOLEAN NOT NULL DEFAULT FALSE,
    CONSTRAINT uq_bed_label_per_service UNIQUE (hospital_service_id, label)
);

CREATE INDEX idx_hospital_services_department ON hospital_services(department_id);
CREATE INDEX idx_beds_service ON beds(hospital_service_id);
