@startuml CLASSES_PARTICIPANTES_SERVICES_HOSP_FR
title "Classes participantes — Gérer les services hospitaliers — version FR alignée (mêmes classes/relations)"

skinparam classAttributeIconSize 0

class Administrateur <<actor>>

class HospitalServicesPage <<boundary>> {
  - departments : List~DepartmentResponse~
  - services : List~HospitalServiceResponse~
  --
  + loadCatalog() : void
  + saveService(form) : void
  + generateBeds(serviceId) : void
}

class HospitalServiceBffController <<boundary>> {
  - catalogClient : CatalogClient
  --
  + listDepartments() : List
  + listServices() : List
  + createService(request) : HospitalServiceResponse
  + updateService(id, request) : HospitalServiceResponse
}

class HospitalServiceController <<boundary>> {
  - hospitalServiceCatalogService : HospitalServiceCatalogService
  --
  + list(activeOnly) : List~HospitalServiceResponse~
  + getById(id) : HospitalServiceResponse
  + create(request) : HospitalServiceResponse
  + update(id, request) : HospitalServiceResponse
  + updateStatus(id, request) : void
}

class HospitalServiceCatalogService <<control>> {
  - hospitalServiceRepository : HospitalServiceRepository
  - bedService : BedService
  --
  + create(request) : HospitalServiceResponse
  + update(id, request) : HospitalServiceResponse
  + delete(id) : void
}

class Department <<entity>> {
  - id : Long
  - code : String
  - name : String
  - active : Boolean
}

class HospitalService <<entity>> {
  - id : Long
  - department : Department
  - name : String
  - bedCapacity : Integer
  - bedsPerRoom : Integer
  - active : Boolean
}

class Bed <<entity>> {
  - id : Long
  - label : String
  - occupied : Boolean
}

Administrateur "1" --> "1" HospitalServicesPage : association
HospitalServicesPage "1" --> "1" HospitalServiceBffController : association
HospitalServiceBffController "1" --> "1" HospitalServiceController : association
HospitalServiceController "1" --> "1" HospitalServiceCatalogService : association
HospitalServiceCatalogService "1" --> "0..*" HospitalService : association
HospitalService "1" --> "1" Department : association
HospitalServiceCatalogService "1" --> "0..*" Bed : association

legend right
--
  **Relations** : association (--) · dependency (..>)
  Multiplicities on each link
endlegend

@enduml